Fix a11y contrast ratio problems

--- a/edx_credentials_themes/static/edx.org/base/sass/views/certificate.scss
+++ b/edx_credentials_themes/static/edx.org/base/sass/views/certificate.scss
@@ -2,7 +2,8 @@
    background: $gray-100;
 
   a {
-    color: $blue;
+    color: $info-700;
+    text-decoration-color: $info-700;
   }
 
   .accomplishment-rendering {
